minikube/kapacitor/template.yaml
---
# Source: kapacitor/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picasa-kapacitor
  labels:
    chart: "kapacitor-1.4.5"
    release: "picasa"
    heritage: "Helm"
    app: picasa-kapacitor
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    name: api
  selector:
    app: picasa-kapacitor
---
# Source: kapacitor/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picasa-kapacitor
  namespace: picasa-local
  labels:
    chart: "kapacitor-1.4.5"
    release: "picasa"
    heritage: "Helm"
    app: picasa-kapacitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picasa-kapacitor
  template:
    metadata:
      labels:
        app: picasa-kapacitor
    spec:
      serviceAccountName: picasa-kapacitor
      containers:
      - name: kapacitor
        image: "kapacitor:1.6.3-alpine"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: data
          mountPath: /var/lib/kapacitor
        resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 0.1
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: picasa-kapacitor
